FIX: Label can now be opened on mobile. Label button styling on mobile amended

--- a/src/app/history/history-item/history-item.component.scss
+++ b/src/app/history/history-item/history-item.component.scss
@@ -12,3 +12,12 @@
   margin-top: 0.5rem;
 }
 
+@media only screen and (max-width: 654px) {
+  .labelButton {
+    width: 4rem;
+    background-color: #4BC8B6;
+    border-radius: 10px;
+    margin-top: 0.5rem;
+    margin-left: 1.5rem;
+  }
+}
